# radarr-bot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
rbot/: README.md  __about__.py  __init__.py  __main__.py  decorators.py  handlers.py  models.py  requirements.txt  utils.py
rbot/conf/: settings.py
rbot/radarr/: api.py
rbot/rbot/: __main__.py
rbot/storage/: models.py  redis.py
rbot/tmdb/: api.py
tests/: __init__.py
tests/test_commands/: test_search_movie.py  test_search_series.py
tests/test_commands/cassettes/test_search_movie/: test_get_movie_detail.yaml  test_search_invalid_movie.yaml  test_search_movie.yaml
tests/test_commands/cassettes/test_search_series/: test_search_invalid_movie.yaml  test_search_invalid_serie.yaml  test_search_series.yaml
tests/test_radarr/: test_radarr_api.py
tests/test_radarr/cassettes/test_radarr_api/: test_add_movie_already_in_radarr.yaml  test_add_movie_to_radarr.yaml  test_add_movie_to_radarr_error.yaml  test_get_movies_from_radarr.yaml
tests/test_storage/test_models/: test_movie_model.py
tests/test_tmdb/: test_search.py
tests/test_tmdb/cassettes/test_search/: test_search_movie.yaml
tests/test_tmdb/movies/: test_search_movies.py
tests/test_tmdb/movies/cassettes/test_search_movie/: test_get_movie_detail.yaml  test_search_invalid_movie.yaml  test_search_movie.yaml
tests/test_tmdb/movies/cassettes/test_search_movies/: test_get_movie_detail.yaml  test_search_invalid_movie.yaml  test_search_movie.yaml
